# simple-ticketing

./: .pdm-python  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
app/: main.py
app/db/: database.py
app/models/: message.py  ticket.py  user.py
app/routes/: ticket.py  users.py
app/schemas/: message.py  ticket.py  user.py
app/services/: message-service.py  user-service.py
tests/: test-tickets.py  test-users.py
