[project]
name = "simple-ticketing"
version = "0.1.0"
description = "A RESTful ticketing system with tree-structured messages"
dependencies = [
    "fastapi==0.95.1",
    "uvicorn==0.21.1",
    "sqlalchemy==2.0.9",
    "psycopg2-binary==2.9.6",
    "pydantic==1.10.7",
    "pytest==7.3.1",
    "httpx==0.24.0",
]

[tool.pdm.dev-dependencies]
test = [
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]
lint = [
    "flake8>=6.0.0",
    "black>=23.3.0",
]

[tool.pdm.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
start-prod = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --workers 4"
test = "pytest --cov=./app --cov-report=term --cov-fail-under=85 -vvv tests"
lint = "flake8 app tests"
format = "black app tests"